# exam_generator

./: .gitignore  LICENSE  MANIFEST.in  README.md  encryption_utils.py  main.py  pdf_builder.py  pyproject.toml  question_parser.py  requirements.txt  setup.py  styles_manager.py  test.py  test_config.py  test_generator.py
.github/workflows/: build-wheel.yml
examples/: README.md  complete_example.py  example_builder.py  example_i18n.py  test_embedded_fonts.py  test_font_independence.py
src/exam_generator/: __init__.py  config.py  core.py  encryption.py  exceptions.py  fonts.py  i18n.py
src/exam_generator/internal/: __init__.py  encryption.py  pdf_builder.py  question_parser.py  styles.py
