[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "exam_generator"
dynamic = ["version"]
description = "Professional exam generator with QR code answer sheets"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Antonio Aguilar", email = "jaguilar992@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    "qrcode[pil]>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/jaguilar992/exam_generator"
Repository = "https://github.com/jaguilar992/exam_generator"
Documentation = "https://github.com/jaguilar992/exam_generator#readme"

[tool.setuptools.dynamic]
version = {attr = "exam_generator.__version__"}